--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/s3-request-presigner": "^3.569.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -29,6 +30,8 @@
     "next-auth": "^5.0.0-beta.17",
     "nodemon": "^3.1.0",
     "page-count": "^0.0.4",
+    "razorpay": "^2.9.4",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1",
     "winston": "^3.13.0"
   }
