--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.569.0",
+    "@aws-sdk/lib-storage": "^3.588.0",
     "@aws-sdk/s3-request-presigner": "^3.569.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
