--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
     "next-auth": "^5.0.0-beta.17",
