--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
+    "docx": "^8.5.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -36,7 +37,9 @@
     "pdfkit": "^0.15.0",
     "razorpay": "^2.9.4",
     "socket.io": "^4.7.5",
+    "unzipper": "^0.12.1",
     "uuid": "^9.0.1",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "xml2js": "^0.6.2"
   }
 }
