--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "docx": "^8.5.0",
+    "docx-pdf-pagecount": "^0.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -36,7 +37,9 @@
     "page-count": "^0.0.4",
     "pdfkit": "^0.15.0",
     "socket.io": "^4.7.5",
+    "unzipper": "^0.12.1",
     "uuid": "^9.0.1",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "xml2js": "^0.6.2"
   }
 }
