--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/lib-storage": "^3.588.0",
     "@aws-sdk/s3-request-presigner": "^3.569.0",
     "axios": "^1.6.8",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
