improved the code quality

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,40 @@
+
 PORT=4000
 NODE_ENV=development
-DATABASE_URL=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
+DATABASE_URL=mongodb+srv:zcanqrq.mongodb.net/dokopi?retryWrites=true&w=majority&appName=dokopi-cluster
 
-JWT_SALT=
-JWT_SECRET=
-PLATFORM_CHARGES=1
+JWT_SECRET=12345678jkhhjhfdsuihuikf
+PLATFORM_CHARGES=10
+JWT_SALT=a-token
+DEV_JWT_SALT=__Secure-token
 
 
 AWS_ACCESS_KEY=
-AWS_SECRET_KEY=
-AWS_BUCKET_NAME=
-AWS_REGION=
+AWS_SECRET_KEY=ngk7S
+AWS_BUCKET_NAME=two
+AWS_REGION=ap-south-1
 
-RAZORPAY_KEY_ID=
-RAZORPAY_KEY_SECRET=
+FILE_URL_DECRYPTION_KEY=inF
+RECEIPT_PREFIX=receipt
+
+PAYMENT_SUCCESS_URL=http://localhost:3000/payment/success 
+PAYMENT_FAILURE_URL=https://yment/failure
 
 
+PHONE_PE_TEST_MERCHANT_ID=PAT92
+PHONE_PE_TEST_SALT_KEY=2ecdb483ab3c-6725b15a034f
+PHONE_PE_TEST_SALT_INDEX=1
+
+PHONE_PE_LIVE_MERCHANT_ID=
+PHONE_PE_LIVE_SALT_KEY=
+PHONE_PE_LIVE_SALT_INDEX=10
 
 
+PHONE_PE_PROD_URL=
+PHONE_PE_TEST_URL=
 
+FRONTEND_DOMAIN=
+TEST_FRONTEND_DOMAIN=
+
+
+GOOGLE_MAPS_API_KEY=vzdfgsdshgds
