--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "docx": "^8.5.0",
     "docx-pdf-pagecount": "^0.0.3",
     "dotenv": "^16.4.5",
+    "dotenv-safe": "^9.1.0",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
