--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.2.0",
+    "googleapis": "^142.0.0",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "joi": "^17.13.3",
