feat: implemented winston logger with daily file rotation

--- a/package.json
+++ b/package.json
@@ -43,9 +43,12 @@
     "page-count": "^0.0.4",
     "pdfkit": "^0.15.0",
     "socket.io": "^4.7.5",
+    "source-map-support": "^0.5.21",
     "unzipper": "^0.12.1",
     "uuid": "^9.0.1",
     "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "winston-mongodb": "^5.1.1",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
