--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.569.0",
-    "@aws-sdk/lib-storage": "^3.588.0",
-    "@aws-sdk/s3-request-presigner": "^3.569.0",
-    "axios": "^1.6.8",
+    "@aws-sdk/client-s3": "^3.637.0",
+    "@aws-sdk/lib-storage": "^3.637.0",
+    "@aws-sdk/s3-request-presigner": "^3.637.0",
+    "axios": "^1.7.4",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -29,24 +29,25 @@
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.2.0",
+    "express-rate-limit": "^7.4.0",
     "googleapis": "^142.0.0",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
-    "mongoose": "^8.3.4",
+    "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
     "next-auth": "^5.0.0-beta.17",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.4",
+    "npm-check-updates": "^17.1.0",
     "page-count": "^0.0.4",
     "pdfkit": "^0.15.0",
     "socket.io": "^4.7.5",
     "source-map-support": "^0.5.21",
-    "unzipper": "^0.12.1",
-    "uuid": "^9.0.1",
-    "winston": "^3.13.0",
+    "unzipper": "^0.12.3",
+    "uuid": "^10.0.0",
+    "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0",
     "winston-mongodb": "^5.1.1",
     "xml2js": "^0.6.2"
