--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "cross-env NODE_ENV=production node app.js",
+    "dev": "cross-env NODE_ENV=development nodemon app.js",
     "prepare": "husky"
   },
   "keywords": [],
@@ -23,11 +22,13 @@
     "axios": "^1.7.4",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "docx": "^8.5.0",
     "docx-pdf-pagecount": "^0.0.3",
     "dotenv": "^16.4.5",
+    "dotenv-flow": "^4.1.0",
     "dotenv-safe": "^9.1.0",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
