feat: Added a favicon to the server

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "npm-check-updates": "^17.1.0",
     "page-count": "^0.0.4",
     "pdfkit": "^0.15.0",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^4.7.5",
     "source-map-support": "^0.5.21",
     "unzipper": "^0.12.3",
